--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/useraccount
-spring.datasource.username=root
-spring.datasource.password=1234321234
+# spring.datasource.url=jdbc:mysql://localhost:3306/useraccount
+# spring.datasource.username=root
+# spring.datasource.password=1234321234
 
-# spring.datasource.url=jdbc:mysql://root:c4my1iG0TOKcXCKdvGZo@containers-us-west-95.railway.app:7064/railway
+# Database configuration
+spring.datasource.url=jdbc:mysql://root:c4my1iG0TOKcXCKdvGZo@containers-us-west-95.railway.app:7064/railway
 
